--- a/revision.html
+++ b/revision.html
@@ -38,14 +38,19 @@
 
 .grid-container {
     display: grid;
-    margin-top: 50px; /* Ajustado el margen superior para separar el título */
+    margin-top: 50px; 
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 30px;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     justify-content: space-evenly;
-    position: relative; /* Añadido posicionamiento relativo */
+    position: relative; 
+    
+    background-image: url('images/pngtree-sea-__sea-bottom-light-advertising-background-picture-image_2249618.jpeg'); /* Ruta de la imagen de fondo */
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
 }
 
 .grid-item {
